WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69302
Content area does not return to the correct position after rubberbanding
https://bugs.webkit.org/show_bug.cgi?id=69302
Summary
Content area does not return to the correct position after rubberbanding
Anders Carlsson
Reported
2011-10-03 16:04:47 PDT
Content area does not return to the correct position after rubberbanding
Attachments
Patch
(1.29 KB, patch)
2011-10-03 16:09 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-10-03 16:09:04 PDT
Created
attachment 109546
[details]
Patch
Anders Carlsson
Comment 2
2011-10-03 16:10:26 PDT
Committed
r96555
: <
http://trac.webkit.org/changeset/96555
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug