Content area does not return to the correct position after rubberbanding https://bugs.webkit.org/show_bug.cgi?id=69302 <rdar://problem/10102886>

Reviewed by Sam Weinig.

Make sure to schedule a display after adding to the dirty region.

* WebProcess/WebPage/DrawingAreaImpl.cpp:
(WebKit::DrawingAreaImpl::scroll):


Canonical link: https://commits.webkit.org/85317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96555 268f45cc-cd09-0410-ab3c-d52691b4dbfc